stdout
compiling CircularBufferTest.cpp
compiling AllTests.cpp
compiling CircularBuffer.c
CircularBuffer.c:15:5: error: expected ':', ',', ';', '}' or '__attribute__' before 'int'
   15 |     int * values;
      |     ^~~
compilation terminated due to -Wfatal-errors.
make: *** [/cpputest/build/MakefileWorker.mk:525: objs/CircularBuffer.o] Error 1
